# Student_API

./: README.md  pyproject.toml
student/: db.sqlite3
student/student/: settings.py  urls.py
student/studentapi/: admin.py  models.py  serilizer.py  urls.py  views.py
student/studentapi/migrations/: 0001_initial.py
